tests/failure/missing/semicolon_3.lsy
DERIVATION: 3;
ANGLE_FACTOR: 60.0;
SCALE_FACTOR: 1.0;
AXIOM:F
IGNORE:A;

PRODUCTIONS:
    * < F > * --> FF;
END_PRODUCTIONS;
